# digital-health

./: .dockerignore  .env.example  .eslintrc.cjs  .gitignore  Makefile  README.md  index.html  package.json  pyproject.toml  quasar.config.js  requirements.txt
deployment/: Dockerfile.backend
server/: app.py  config.py  environment.py  websocket.py
server/admin/: __init__.py  authentication.py  devices.py  measurement.py  user.py
server/models/: __init__.py  association_table.py  devices.py  measurement.py  user.py
server/routes/: __init__.py  devices.py  measurement.py  test.py  user.py
server/schemas/: __init__.py  devices.py  measurement.py  user.py
server/service/: __init__.py  devices.py  measurement.py  user.py  websocket.py
server/settings/: __init__.py  auth.py  config.py  database.py  environment.py  sql.py
server/tests/: README.md
src/: README.md  package.json  quasar.config.js
src/boot/: axios.ts
src/components/: AuthForm.vue  CalendarRow.vue  DevelopmentStage.vue  DevicesList.vue  DialogCard.vue  HomeSlide.vue  HomeVue.vue  MeasurementCard.vue  MeasurementsList.vue  NoMobile.vue  SymptomsList.vue  WebsocketVue.vue
src/composables/: useAuth.ts  useDevice.ts
src/css/: app.scss
src/css/base/: _base.scss  _fonts.scss  _index.scss
src/css/components/: _auth-form.scss  _index.scss  (+6 more)
src/layouts/: MainLayout.vue  UnauthLayout.vue  WsLayout.vue
src/models/: auth.ts  devices.ts  index.ts  message.ts
src/pages/: AuthPage.vue  DevicesPage.vue  IndexPage.vue  MeasurementsPage.vue  SymptomsPage.vue  WsPage.vue
src/router/: routes.ts
src/stores/: auth.ts
(+2 files in other folders)
