[tool.poetry]
name = "intensive"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.3"
uvicorn = "^0.29.0"
sqlalchemy = "^2.0.29"
sqlalchemy-utils = "^0.41.2"
python-dotenv = "^1.0.1"
psycopg2 = "^2.9.9"
python-multipart = "^0.0.9"
pydantic = "^2.7.1"
bcrypt = "^4.1.2"
werkzeug = "^3.0.2"
sqladmin = "^0.16.1"
jwt = "^1.3.1"
itsdangerous = "^2.2.0"
pyjwt = "^2.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
